@@ -1,3 +1,8 @@
+2019-10-08  Enrico Schumann  <es@enricoschumann.net>
+
+	* R/plotseries.R (plotseries): add arguments
+	'labels.col' and 'cex.axis'
+
 2019-10-07  Enrico Schumann  <es@enricoschumann.net>
 
 	* R/plotseries.R (plotseries): decrease
